--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,15 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
   font-family: "Pt Sans", sans-serif;
   font-size: 22px;
   line-height: 26px;
@@ -27,6 +35,35 @@ ul {
 }
 
 /* Header */
+.page-header {
+  background-color: inherit;
+}
+
+.navigation {
+  display: flex;
+  margin: 0 auto;
+  width: 1200px;
+}
+
+.logo-link {
+  display: block;
+}
+
+.navigation-list, .navigation-user {
+  margin: 0;
+  padding: 0;
+}
+
+.navigation-list {
+  width: 339px;
+  margin-left: 30px;
+}
+
+.navigation-user {
+  width: 268px;
+  margin-left: auto;
+}
+
 .navigation-link, .navigation-user-link {
   color: #333333;
   text-decoration: none;
@@ -37,7 +74,7 @@ ul {
 }
 
 .fav-count {
-  background: #7DB54F;
+  background-color: #7DB54F;
   border-radius: 10px;
   color: #ffffff;
   text-align: center;
@@ -47,7 +84,7 @@ ul {
 }
 
 .button {
-  background: #756157;
+  background-color: #756157;
   border-radius: 4px;
   text-transform: uppercase;
   font-family: "Pt Sans", sans-serif;
@@ -58,6 +95,10 @@ ul {
 }
 
 /* Main page */
+.main-container {
+  flex-grow: 1;
+}
+
 .welcome {
   background-image: url("../img/main/index-background.jpg");
   background-size: 100% auto;
@@ -147,7 +188,7 @@ ul {
 }
 
 .footer-subscription-button {
-  background: #82B3D3;
+  background-color: #82B3D3;
   border-radius: 0 4px 4px 0;
   color: #ffffff;
   font-family: 'PT Sans';
@@ -227,7 +268,7 @@ ul {
 }
 
 .price-setter {
-  background: #ffffff;
+  background-color: #ffffff;
   border-radius: 5px;
 }
 
