--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,10 +24,10 @@ body {
   font-size: 22px;
   line-height: 26px;
   color: #333333;
-  background-color: #ffffff;
+  background-color: #f2f2f2;
 }
 
-ul {
+.modified-ul {
   list-style-type: none;
 }
 
@@ -50,6 +50,8 @@ ul {
   min-height: 100%;
   width: 1200px;
   margin: 0 auto;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  background-color: #ffffff;
 }
 
 /* Header */
@@ -173,13 +175,18 @@ ul {
   flex-wrap: wrap;
 }
 
-.reasons-item {
+.reasons-item-block {
   display: flex;
-  width: 400px;
+  padding: 0;
+  width: 1200px;
+  color: #ffffff;
+  background-color: #82B3D3;
 }
 
-.reasons-item:last-child {
-  flex-direction: row-reverse;
+.reasons-item {
+  width: 400px;
+  padding: 112.5px 85px;
+  box-sizing: border-box;
 }
 
 .reasons-description-wrapper {
@@ -201,6 +208,14 @@ ul {
   margin-bottom: 0;
 }
 
+.reasons-description {
+  margin-top: 25px;
+}
+
+.services-description, .search-description {
+  margin-top: 20px;
+}
+
 .reasons-image-wrapper {
   overflow: hidden;
 }
@@ -210,11 +225,8 @@ ul {
   height: 100%;
 }
 
-.reasons-town, .reasons-bridge {
-  padding: 0;
-  width: 1200px;
-  color: #ffffff;
-  background-color: #82B3D3;
+.reasons-bridge {
+  flex-direction: row-reverse;
 }
 
 .reasons-area, .reasons-tourist {
@@ -299,31 +311,46 @@ ul {
 }
 
 .footer-subscription-title {
-  margin: 0;
+  margin: 0 auto;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
+  width: 410px;
 }
 
 .footer-subscription-description {
+  margin: 20px auto 54px;
   font-weight: 400;
+  width: 475px;
+}
+
+.footer-subscription-form {
+  display: flex;
+  justify-content: center;
 }
 
 .footer-subscription-email {
-  opacity: 0.6;
+  width: 100%;
+  padding-left: 20px;
+  border: none;
+  border-radius: 4px 0 0 4px;
+  font-family: "PT Sans", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  color: #00000099;
+  background-color: #f2f2f2;
 }
 
 .footer-subscription-button {
-  background-color: #82B3D3;
+  border: none;
   border-radius: 0 4px 4px 0;
-  color: #ffffff;
-  font-family: 'PT Sans';
-  font-style: normal;
-  font-weight: 700;
+  background-color: #82B3D3;
   font-size: 20px;
   line-height: 36px;
-  text-transform: uppercase;
+  padding: 8px 50px;
+  min-width: 232px;
 }
 
 .footer-social {
@@ -331,29 +358,42 @@ ul {
   justify-content: space-between;
   align-items: center;
   padding: 40px 70px 30px;
-  width: 1200px;
+  box-sizing: border-box;
 }
 
 .footer-social-list {
   width: 142px;
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
-  padding: 0;
+  padding: 0 0;
+}
+
+.footer-social-item-vk {
+  padding: 11px 11.67px 13px;
+}
+
+.footer-social-item-telegram {
+  padding: 12px 14.67px 12.9px;
+}
+
+.footer-social-item-youtube {
+  padding: 12.3px 12.67px 11.5px 12.5px;
 }
 
 .footer-company-phone {
+  width: 720px;
   color: inherit;
   font-weight: 400;
   font-size: 40px;
   line-height: 40px;
   text-align: center;
-  text-transform: uppercase;
   text-decoration: none;
 }
 
 .footer-company-link {
   max-width: 115px;
-  margin-left: auto;
+  padding-top: 5px;
 }
 
 /* Catalog */
