--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,6 +102,18 @@ body {
   padding: 20px 16px;
 }
 
+.navigation-link:hover {
+  color: #68A2CA;
+}
+
+.navigation-link:focus {
+  outline-color: #81B3D3;
+}
+
+.navigation-link:active {
+  color: #7c97a8;
+}
+
 .navigation-link-current {
   position: relative;
 }
@@ -113,6 +125,19 @@ body {
   width: calc(100% - 34px);
   border-bottom: 2px solid #756257;
   content: "";
+}
+
+.navigation-user-link:hover {
+  opacity: 0.5;
+}
+
+.navigation-user-link:focus {
+  outline: none;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.navigation-user-link:active {
+  background-color: #9ecae8;
 }
 
 .link-search {
@@ -164,6 +189,20 @@ body {
   color: #ffffff;
   padding: 8px 34px;
   text-decoration: none;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #615048;
+  opacity: 1;
+}
+
+.button:focus {
+  background-color: #615048;
+}
+
+.button:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 /* Main page */
@@ -434,6 +473,26 @@ body {
   background-color: #f2f2f2;
 }
 
+.footer-subscription-email:hover {
+  background-color: #E6E6E6;
+}
+
+.footer-subscription-email:focus {
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+}
+
+.footer-subscription-email:not(:placeholder-shown) {
+  background: #F2F2F2;
+  outline: 2px solid #000000;
+}
+
+.footer-subscription-email:disabled {
+  background-color: rgba(0, 0, 0, 0.3);
+  color: rgba(0, 0, 0, 0.3);
+}
+
+
 .footer-subscription-button {
   border: none;
   border-radius: 0 4px 4px 0;
@@ -442,6 +501,19 @@ body {
   line-height: 36px;
   padding: 8px 50px;
   min-width: 232px;
+}
+
+.footer-subscription-button:hover {
+  background-color: #68A2CA;
+}
+
+.footer-subscription-button:focus {
+  outline: none;
+  background-color: #68A2CA;
+}
+
+.footer-subscription-button:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .footer-social {
@@ -472,6 +544,22 @@ body {
   padding: 12.3px 12.67px 11.5px 12.5px;
 }
 
+.social-icon {
+  fill: #83B3D3;
+}
+
+.social-icon:hover, .social-icon:focus {
+  fill: #68A2CA;
+}
+
+.social-icon:focus {
+  outline: none;
+}
+
+.social-icon:active {
+  fill: rgba(104, 162, 202, 0.3);
+}
+
 .footer-company-phone {
   width: 720px;
   color: inherit;
@@ -482,9 +570,39 @@ body {
   text-decoration: none;
 }
 
+.footer-company-phone:hover {
+  color: #756157;
+}
+
+.footer-company-phone:focus {
+  color: #756157;
+  outline: none;
+}
+
+.footer-company-phone:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
 .footer-company-link {
   max-width: 115px;
   padding-top: 5px;
+}
+
+.company-icon {
+  fill: #000000;
+}
+
+.company-icon:hover {
+  fill: #756157;
+}
+
+.company-icon:focus {
+  fill: #756157;
+  outline: none;
+}
+
+.company-icon:active {
+  fill: rgba(117, 97, 87, 0.3);
 }
 
 /* Catalog */
@@ -496,6 +614,7 @@ body {
 
 .inner-filter {
   color: #ffffff;
+  background-color: #333333;
   background-image: url(../img/catalog/catalog-background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -525,12 +644,21 @@ body {
 }
 
 .breadcrumbs-link {
+  color: #ffffff;
   display: block;
   font-weight: 400;
   font-size: 16px;
   line-height: 21px;
   text-decoration: none;
   cursor: pointer;
+}
+
+.breadcrumbs-link:hover {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.breadcrumbs-link:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .link-main {
@@ -552,6 +680,7 @@ body {
   background-image: url("../img/catalog/arrow.svg");
   background-repeat: no-repeat;
   background-position: center;
+  cursor: initial;
 }
 
 .housing-filter {
@@ -577,8 +706,7 @@ body {
 
 .filter-price {
   width: 288px;
-  margin-left: 0;
-  margin-right: 30px;
+  margin: 0;
   padding: 0;
   border: none;
 }
@@ -626,6 +754,18 @@ body {
   border-radius: 4px;
 }
 
+.control-label:hover {
+  opacity: 0.6;
+}
+
+.control-label:focus {
+  outline: none;
+}
+
+.control-label:active {
+  opacity: 0.3;
+}
+
 .control-input[type="checkbox"]:checked + .control-selected::before {
   position: absolute;
   content: "";
@@ -636,6 +776,19 @@ body {
   left: 25%;
   height: 10px;
   width: 12px;
+}
+
+.control-input[type="checkbox"]:hover + .control-selected {
+  opacity: 0.6;
+  border-radius: 4px;
+}
+
+.control-input[type="checkbox"]:focus + .control-selected {
+  outline: 3px solid #83b3d3;
+}
+
+.control-input[type="checkbox"]:active + .control-selected {
+  opacity: 0.3;
 }
 
 .control-input[type="radio"] + .control-selected {
@@ -651,6 +804,19 @@ body {
   left: 5px;
   height: 10px;
   width: 10px;
+}
+
+.control-input[type="radio"]:hover + .control-selected {
+  opacity: 0.6;
+}
+
+.control-input[type="radio"]:focus + .control-selected {
+  outline: 3px solid #83b3d3;
+  border-radius: 18px;
+}
+
+.control-input[type="radio"]:active + .control-selected {
+  opacity: 0.3;
 }
 
 .price-inputs {
@@ -711,6 +877,25 @@ body {
   border-radius: 4px 0 0 4px;
 }
 
+.price-range-min:hover, .price-range-max:hover {
+  background-color: #E6E6E6;
+}
+
+.price-range-min:focus, .price-range-max:focus {
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+}
+
+.price-range-min:not(:placeholder-shown), .price-range-max:not(:placeholder-shown) {
+  background: #F2F2F2;
+  outline: 2px solid #000000;
+}
+
+.price-range-min:disabled, .price-range-max:disabled {
+  background-color: rgba(0, 0, 0, 0.3);
+  color: rgba(0, 0, 0, 0.3);
+}
+
 .price-range-max {
   border-radius: 0 4px 4px 0;
 }
@@ -741,6 +926,20 @@ body {
   cursor: pointer;
 }
 
+.price-setter:hover {
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+}
+
+.price-setter:focus {
+  outline: 3px solid #83B3D3;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+}
+
+.price-setter:active {
+  outline: 2px solid #83B3D3;
+  box-shadow: 0 7px 15px rgba(0, 0, 0, 0.4);
+}
+
 .set-min {
   top: -8px;
 }
@@ -756,7 +955,23 @@ body {
   padding-right: 50px;
   border: none;
   margin-bottom: 32px;
-  cursor: pointer;
+}
+
+.button-add:hover {
+  background-color: #68A2CA;
+}
+
+.button-add:focus {
+  outline: none;
+  background-color: #68A2CA;
+}
+
+.button-add:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.button-add:disabled {
+  background-color: #E5E5E5;
 }
 
 .button-reset {
@@ -764,8 +979,29 @@ body {
   padding-right: 57.5px;
   border: none;
   background-color: transparent;
-  cursor: pointer;
 }
+
+.button-reset:hover {
+  opacity: 0.6;
+  background-color: transparent;
+}
+
+.button-reset:focus {
+  border: none;
+  outline: 3px solid #83B3D3;
+  background-color: transparent;
+}
+
+.button-reset:active {
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.3);
+  outline: none;
+}
+
+.button-reset:disabled {
+  opacity: 0.1;
+}
+
 
 /* Catalog list */
 .results-page {
@@ -820,6 +1056,25 @@ body {
   padding: 12px 40px 12px 20px;
 }
 
+.housing-list-sort:hover {
+  border-color: #68a2ca;
+}
+
+.housing-list-sort:focus {
+  border-color: #68a2ca;
+  outline: none;
+}
+
+.housing-list-sort:active {
+  border-color: #3f5e72;
+}
+
+.housing-list-sort:disabled {
+  color: #d9d9d9;
+  border: 2px solid #0000004d;
+  opacity: 0.3;
+}
+
 .housing-list-view {
   margin: 0 0 0 auto;
   padding: 0;
@@ -828,11 +1083,12 @@ body {
   flex-wrap: wrap;
   gap: 9px;
   width: 170px;
+  font-size: 18px;
+  line-height: 21px;
 }
 
 .view-toggle {
   display: block;
-  box-sizing: border-box;
   min-height: 14px;
   min-width: 16px;
   padding: 11px 14px;
@@ -844,6 +1100,19 @@ body {
   border-color: #000000;
 }
 
+.view-toggle:hover {
+  border: 2px solid #000;
+}
+
+.view-toggle:focus {
+  border: 2px solid #68A2CA;
+  outline: none;
+}
+
+.view-toggle:active {
+  border: 2px solid #000;
+}
+
 .housing-list-items {
   margin: 0 auto;
   padding: 0;
@@ -853,7 +1122,6 @@ body {
 }
 
 .housing-item {
-  /* 340 + 2px for border */
   width: 340px;
   padding: 20px;
   border: 1px solid #e6e6e6;
@@ -912,10 +1180,28 @@ body {
   padding-right: 20px;
 }
 
+.button-favorite:hover {
+  background-color: #68A2CA;
+}
+
+.button-favorite:focus {
+  background-color: #68A2CA;
+  outline: none;
+}
+
 .button-selected {
   background-color: #7DB54F;
   padding-left: 18px;
   padding-right: 18px;
+}
+
+.button-selected:hover {
+  background-color: #6C9E42;
+}
+
+.button-selected:focus {
+  background-color: #6C9E42;
+  outline: none;
 }
 
 .item-grades {
@@ -990,7 +1276,37 @@ body {
   padding: 11px 16px;
 }
 
+.pagination-link:hover {
+  background-color: #68A2CA;
+}
+
+.pagination-link:focus {
+  background-color: #68a2ca;
+  outline: none;
+}
+
+.pagination-link:active {
+  background-color: #82b3d3;
+  color: #ffffff4d;
+}
+
 .pagination-prev {
+  color: #000000;
+  background-color: #F2F2F2;
+  cursor: default;
+}
+
+.pagination-prev:hover {
+  color: #000000;
+  background-color: #F2F2F2;
+}
+
+.pagination-prev:focus {
+  color: #000000;
+  background-color: #F2F2F2;
+}
+
+.pagination-prev:active {
   color: #000000;
   background-color: #F2F2F2;
 }
@@ -998,4 +1314,19 @@ body {
 .pagination-next {
   color: #000000;
   background-color: transparent;
+}
+
+.pagination-next:hover {
+  background-color: #f2f2f2;
+  color: #000000;
+}
+
+.pagination-next:focus {
+  background-color: #f2f2f2;
+  color: #000000;
+}
+
+.pagination-next:active {
+  background-color: #f2f2f2;
+  color: #000000;
 }
