--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1330,3 +1330,212 @@ body {
   background-color: #f2f2f2;
   color: #000000;
 }
+
+/* Modal container */
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.8);
+  display: none;
+}
+
+.modal-search {
+  width: 717px;
+  position: relative;
+  margin: auto;
+  padding: 64px 70px;
+  background-color: #ffffff;
+  box-shadow: 0 25px 50px rgb(0 0 0 / 15%);
+  border-radius: 30px;
+  box-sizing: border-box;
+}
+
+.modal-container-open {
+  display: flex;
+}
+
+.search-form-title {
+  margin: 0;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 577px;
+  margin: 64px 0 0;
+  box-sizing: border-box;
+}
+
+.date-form {
+  display: flex;
+  align-items: baseline;
+  margin-bottom: 23px;
+  justify-content: space-between;
+}
+
+.date-label {
+  width: 125px;
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 700;
+}
+
+.date-input-container {
+  width: 440px;
+}
+
+.date-field {
+  background-color: #F2F2F2;
+  background-image: url("../img/main/modal/date.svg");
+  background-repeat: no-repeat;
+  background-position: right 21px center;
+  margin: 0;
+  padding: 12px 0 12px 20px;
+  border: none;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  width: 100%;
+}
+
+.date-field-error {
+  display: block;
+  margin-top: 4px;
+  margin-left: 21px;
+  font-size: 16px;
+  line-height: 21px;
+  font-weight: 400;
+}
+
+.error-red {
+  color: rgba(255, 87, 87, 1);
+}
+
+.person-number {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 48px;
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 700;
+  align-items: center;
+}
+
+.number-adults-label {
+  text-align: center;
+  padding: 0;
+  margin-right: 46px;
+}
+
+.number-kids-label {
+  text-align: center;
+  padding: 0;
+  margin-right: 82px;
+}
+
+.counter-container {
+  display: flex;
+  width: 110px;
+}
+
+.counter-container:not(:last-child) {
+  margin-right: 88px;
+}
+
+.counter-button {
+  display: block;
+  width: 40px;
+  height: 48px;
+  background-color: #F2F2F2;
+  border: none;
+  cursor: pointer;
+  background-position: center center;
+  background-repeat: no-repeat;
+  padding: 0;
+}
+
+.button-minus {
+  background-image: url("../img/main/modal/minus.svg");
+}
+
+.button-plus {
+  background-image: url("../img/main/modal/plus.svg");
+}
+
+.counter-input::-webkit-outer-spin-button, .counter-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.counter-input {
+  appearance: textfield;
+  -moz-appearance: textfield;
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: 700;
+  color: #000000;
+  margin: 0;
+  width: 31px;
+  box-sizing: border-box;
+  background-color: #F2F2F2;
+  border: none;
+  padding: 0 10px;
+  cursor: pointer;
+}
+
+.search-button {
+  background-color: #82B3D3;
+  border: none;
+  padding: 18px 256.5px;
+  border-radius: 10px;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.search-button:hover {
+  background-color: #68A2CA;
+}
+
+.search-button:focus {
+  outline: none;
+  background-color: #68A2CA;
+}
+
+.search-button:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.search-button:disabled {
+  background-color: #E5E5E5;
+}
+
+.modal-close-button {
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  top: 64px;
+  right: 53px;
+  padding: 26px;
+  background-color: #F2F2F2;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+}
+
+.close-button-svg {
+  position: absolute;
+  fill: #000000;
+  top: 19px;
+  right: 19px;
+}
